# LLM-Distillation

./: .gitignore  README.md  config.yaml.example  cot_tools_config.yaml  dataset.ipynb  generate.py  generate_single.py  generate_single_file.py  gitingest.md  meta_generate.py  meta_generate_single.py  pyproject.toml  start.sh  start_uv.sh  synthetic-data-kit_README.md  upload_dataset.py  uvscripts_generate.py
Llama-4-Maverick-17B-128E-Instruct-FP8/: 2022-china-retail-digitalization-whitepaper_qa_pairs_cleaned.jsonl  a-microscope-on-small-businesses-spotting-opportunities-to-boost-productivity_qa_pairs_cleaned.jsonl  a-new-future-of-work-the-race-to-deploy-ai-and-raise-skills-in-europe-and-beyond_qa_pairs_cleaned.jsonl  accelerating-indias-sustainability-journey-in-chemicals_final_qa_pairs_cleaned.jsonl  accelerating-the-transition-to-net-zero-travel-strategies-for-action_qa_pairs_cleaned.jsonl  ai-for-social-good-improving-lives-and-protecting-the-planet-v2_qa_pairs_cleaned.jsonl  aluminum-decarbonization-at-a-cost-that-makes-sense-final_qa_pairs_cleaned.jsonl  asian-american-workers-diverse-outcomes-and-hidden-challenges_qa_pairs_cleaned.jsonl  beyond-the-hype-capturing-the-potential-of-ai-and-gen-ai-in-tmt_qa_pairs_cleaned.jsonl  blueprint-to-close-the-womens-health-gap-how-to-improve-lives-and-economies-for-all_qa_pairs_cleaned.jsonl  building-value-by-decarbonizing-the-built-environment-vf_qa_pairs_cleaned.jsonl  closing-the-womens-health-gap-report_qa_pairs_cleaned.jsonl  creating-value-finding-focus-global-insurance-report-2022-vf_qa_pairs_cleaned.jsonl  (+63 more)
(+290 files in other folders)
