[project]
name = "llm-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.31.0",
    "langchain-openai>=0.3.31",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "synthetic-data-kit>=0.0.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]
